增加maven打包笔记